--- a/style.css
+++ b/style.css
@@ -11,3 +11,87 @@ body {
   border-radius: 16px;
   padding: 30px;
 }
+
+header {
+  border-bottom: 1px aolid #f9f7fe;
+  padding: 0 0 30px 0;
+}
+
+a {
+  color: #885df1;
+}
+
+.search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  width: 60%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+
+.search-form-button {
+  background: #885df1;
+  padding: 15px 30px;
+  border: none;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: white;
+  font-size: 16px;
+}
+
+main {
+  padding: 20px 0;
+}
+
+.weather-app-city {
+  margin: 0;
+  font-size: 28px;
+  line-height: 38px;
+}
+
+.weather-app-details {
+  font-size: 16px;
+  color: rgba(39, 33, 66, 0.4);
+  line-height: 24px;
+  font-weight: 500;
+}
+
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-app-details strong {
+  color: #f65282;
+}
+
+.weather-app-temperature-container {
+  display: flex;
+}
+
+.weather-app-icon {
+  font-size: 30px;
+  margin-top: 30px;
+  margin-left: 100px;
+}
+
+.weather-app-temperature {
+  font-size: 88px;
+  font-weight: bold;
+  margin-right: 20px;
+}
+
+.weather-app-unit {
+  margin-top: 16px;
+  font-size: 28px;
+  margin-left: -35px;
+}
+
+footer {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 -80px 0;
+  text-align: center;
+  font-size: 10px;
+  color: rgba (0, 0, 0, 0.6);
+}
