--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ a {
 }
 
 main {
-  padding: 20px 0;
+  padding: 50px 0;
 }
 
 .weather-app-city {
@@ -90,8 +90,8 @@ main {
 
 footer {
   border-bottom: 1px solid #f9f7fe;
-  padding: 0 0 -80px 0;
+  padding: 20px;
   text-align: center;
-  font-size: 10px;
+  font-size: 14px;
   color: rgba (0, 0, 0, 0.6);
 }
