--- a/style.css
+++ b/style.css
@@ -71,19 +71,21 @@ main {
 }
 
 .weather-app-icon {
-  font-size: 30px;
-  margin-top: 30px;
+  width: 88px;
+  margin-top: -15px;
   margin-left: 90px;
+  height: 88px;
 }
 
 .weather-app-temperature {
   font-size: 88px;
   font-weight: bold;
+  line-height: 1;
   margin-right: -30px;
 }
 
 .weather-app-unit {
-  margin-top: 16px;
+  margin-top: 6px;
   font-size: 28px;
   margin-left: -35px;
 }
